# base_trajectory_generator

./: CMakeLists.txt  README.md  package.xml
include/: base_path_generator_node.hpp  path_checker_node.hpp
src/: base_path_generator_node.cpp  path_checker_node.cpp
